# splash-structure

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: elem_anns.sh  lookup_for_ecdf_compactor40.sh  main_structure_compactor_20mers.py  main_structure_compactor_40mers.py  main_structure_target.py  rfam.sh  rfam_for_unsig.sh  simulation.py  structure_compactor_mode.py  structure_target_mode.py
splash_structure_py/: simulation.py  structure_compactor_mode.py  structure_target_mode.py
splash_structure_py/src/: get_pval.py  merge_structure_rfam.py  parse_args.py  prep_query_for_rfam.py  process_compactor_4_segments.jl  process_targets.py  simulate_target.py
src/: elem_annas.py  find_comp_mut.py  get_pval.py  process_compactor_20mers.jl  process_compactor_40mers.jl  process_compactor_40mers_0906.jl  process_targets.py  structure_plot.py
test_runs/: TEST.sh  Test.sh  slurm-52953557.out  slurm-52955672.out  test.after_correction.scores.tsv  test_compactor.tsv
test_runs/juliew_results/: structure_on_targets.tsv
test_runs/juliew_results/int_file/: processed_compactors_40mers.tsv
test_runs/test_data/: test_compactor.tsv
